welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:39: error: value =- is not a member of Int
			ligne=-1
                             ^